# NEX-Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
scripts/: build.sh
src/: brush_base.h  brush_custom_example.cpp  brush_custom_example.h  brush_input.h  brush_library.h  engine.cpp  engine.h  gui.cpp  gui.h  input.cpp  input.h  main.cpp  renderer.cpp  renderer.h  sculpt_command.h  sculpt_manager.cpp  sculpt_manager.h  standard_brushes.cpp  standard_brushes.h
